# bookcut

./: .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  compose.yaml  main.py  pyproject.toml
Zerotoone/: chapter_01_The_Challenge_of_the_Future.md  chapter_02_Party_Like_It's_1999.md  chapter_03_All_Happy_Companies_Are_Different.md  chapter_04_The_Ideology_of_Competition.md  chapter_05_Last_Mover_Advantage.md  chapter_06_You_Are_Not_a_Lottery_Ticket.md  chapter_07_Follow_the_Money.md  chapter_08_Secrets.md  chapter_09_Foundations.md  chapter_10_The_Mechanics_of_Mafia.md  chapter_11_If_You_Build_It,_Will_They_Come.md  chapter_12_Man_and_Machine.md  chapter_13_Seeing_Green.md  chapter_14_The_Founder's_Paradox.md  section_conclusion_-_stagnation_or_singularity.md  section_preface_-_zero_to_one.md
bookcut/: __init__.py  __main__.py  browser.py  cli.py  database.py  downloader.py  jobs.py  lib.py  openlibrary.py  scraper.py  sources.py  splitter.py
gatsby_async/: chapter_04_Chapter_4.md
palaceOfIllusions/: chapter_01_Chapter_1_-_Fire.md  chapter_02_Chapter_2_-_Blue.md  chapter_03_Chapter_3_-_Milk.md  chapter_04_Chapter_4_-_Cosmology.md  chapter_05_Chapter_5_-_Smoke.md  chapter_06_Chapter_6_-_Incarnations.md  chapter_07_Chapter_7_-_Fish.md  chapter_08_Chapter_8_-_Sorceress.md  chapter_09_Chapter_9_-_Portrait.md  chapter_10_Chapter_10_-_Births.md  chapter_11_Chapter_11_-_Scorpion.md  chapter_12_Chapter_12_-_Song.md  chapter_13_Chapter_13_-_Scar.md  chapter_14_Chapter_14_-_Brinjal.md  chapter_15_Chapter_15_-_Lac.md  chapter_16_Chapter_16_-_Boon.md  (+27 more)
(+4 files in other folders)
